#Makefile.am for the scm subdirectory containing the scheme libraries
scmfiles = key-funcs.scm keys.scm mob_events.scm mob_event_test.scm mobutils.scm stats.scm utils.guile table.guile dialog.scm dialog-types.scm mob_event_thread.scm
scmdir = $(DESTDIR)$(datadir)/rpge/scm
scm_DATA = $(scmfiles)
EXTRA_DIST = $(scmfiles)
