#Makefile.am for the scm subdirectory containing the scheme libraries
scmfiles = key-funcs.scm global-bind.scm global-bind-loop.scm default-bindings.scm mob_events.scm mob_event_test.scm mobutils.scm stats.scm utils.guile table.guile dialog.scm dialog-types.scm mob_event_thread.scm border-window.scm item.scm inventory.scm equipment.scm item-types.scm npc.scm terrain.scm map.scm
scmdir = $(DESTDIR)$(datadir)/rpge/scm
scm_DATA = $(scmfiles)
EXTRA_DIST = $(scmfiles)
